--- a/src/app/public/features/search/pages/search.component.scss
+++ b/src/app/public/features/search/pages/search.component.scss
@@ -1,10 +1,10 @@
 @import '~style/common';
 
 .Search {
-  &__sort {
-    height: 38px;
-    background-color: $color-inbox-background;
-    border-bottom: thin solid $color-social-background;
+  &__filters {
+    position: sticky;
+    top: $topbar-height;
+    z-index: $filters-bar-z-index;
   }
 
   &__ad {
